--- a/css/site.css
+++ b/css/site.css
@@ -7,7 +7,7 @@
 
 body {
   -webkit-font-smoothing: antialiased;
-  padding-bottom: 200px; }
+  padding-bottom: 50px; }
 
 .animation-box {
   margin-top: 50px !important;
@@ -17,6 +17,9 @@ body {
   display: block;
   background: url(../img/bottom-shadow.png) 0px 320px no-repeat;
   position: relative; }
+
+.animation-box:last-child:after {
+  border: none; }
 
 .animation-box:after {
   display: block;
@@ -30,9 +33,9 @@ body {
   left: 350px;
   z-index: 10;
   content: '';
-  opacity: 0.03;
-  animation: arrowmove 10s infinite;
-  -webkit-animation: arrowmove 10s infinite; }
+  opacity: 0.09;
+  animation: arrowmove 5s infinite;
+  -webkit-animation: arrowmove 5s infinite; }
 
 @keyframes arrowmove {
   0% {
@@ -99,18 +102,18 @@ ul#slides {
   height: 50px;
   bottom: 10px;
   left: 90px;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 22px;
   font-weight: bold;
   text-shadow: 2px 2px 0px rgba(255, 255, 255, 0.9);
   font-family: "arial", sans-serif;
-  letter-spacing: -0.5px;
+  letter-spacing: -0.3px;
   text-align: justify;
   width: 640px; }
 
 ul.icons {
-  position: relative;
-  padding-top: 10px;
+  position: absolute;
+  margin-top: 120px;
   z-index: 1; }
   ul.icons li {
     position: absolute;
@@ -146,6 +149,17 @@ ul.icons {
     background-position: -619px 0px; }
   ul.icons li.icon12 {
     background-position: -681px 0px; }
+
+.icons.noanim {
+  position: absolute;
+  height: 50px;
+  display: block;
+  margin-top: 120px;
+  z-index: 1;
+  background: url(../img/icons.png);
+  width: 1000px;
+  left: 0px;
+  opacity: 0; }
 
 ul.icons.anim li {
   animation: horizontalanim 10s infinite linear;
@@ -186,7 +200,7 @@ ul.icons.anim li {
     opacity: 0; } }
 
 ul.icons.anim {
-  margin-top: -60px;
+  margin-top: -60px !important;
   position: absolute;
   opacity: 0.9; }
   ul.icons.anim li.icon1 {
@@ -201,13 +215,13 @@ ul.icons.anim {
     -webkit-animation: horizontalanim 6s infinite linear !important;
     -webkit-animation-delay: 4s !important; }
   ul.icons.anim li.icon4 {
-    animation: horizontalanim 7.3s infinite linear !important;
-    -webkit-animation: horizontalanim 7.3s infinite linear !important;
-    -webkit-animation-delay: 5s !important; }
+    animation: horizontalanim 8.3s infinite linear !important;
+    -webkit-animation: horizontalanim 8.3s infinite linear !important;
+    -webkit-animation-delay: 4s !important; }
   ul.icons.anim li.icon5 {
     animation: horizontalanim 7s infinite linear !important;
     -webkit-animation: horizontalanim 7s infinite linear !important;
-    -webkit-animation-delay: 1s !important; }
+    -webkit-animation-delay: 5s !important; }
   ul.icons.anim li.icon6 {
     animation: horizontalanim 6s infinite linear !important;
     -webkit-animation: horizontalanim 6s infinite linear !important;
@@ -242,7 +256,7 @@ ul.icons.anim {
   left: -330px;
   top: 20px;
   background: url(../img/sprite.png);
-  background-position: -375px -345px !important;
+  background-position: -358px -346px !important;
   display: block;
   height: 240px;
   width: 375px;
@@ -254,12 +268,67 @@ ul.icons.anim {
   left: 20px;
   top: 20px;
   background: url(../img/sprite.png);
-  background-position: -375px -345px !important;
+  background-position: -358px -346px !important;
   display: block;
   height: 240px;
   width: 375px;
   background-repeat: no-repeat;
   z-index: 5; }
+
+.tvon {
+  position: absolute;
+  left: 20px;
+  top: 17px;
+  background: url(../img/sprite.png);
+  background-position: -358px -595px !important;
+  display: block;
+  height: 240px;
+  width: 375px;
+  background-repeat: no-repeat;
+  z-index: 5; }
+
+.tvon-final {
+  position: absolute;
+  left: 185px;
+  top: 20px;
+  background: url(../img/sprite.png);
+  background-position: -358px -595px !important;
+  display: block;
+  height: 240px;
+  width: 375px;
+  background-repeat: no-repeat;
+  z-index: 5; }
+
+.screenposition {
+  position: relative;
+  display: block;
+  height: 240px;
+  width: 375px; }
+
+.screenhidden {
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.5) inset;
+  display: block;
+  height: 183px;
+  width: 340px;
+  position: relative;
+  border-radius: 3px;
+  margin-top: 17px;
+  margin-left: 18px;
+  overflow: hidden; }
+
+.screen {
+  background: url(../img/tvscreen.jpg);
+  width: 1700px;
+  height: 300px;
+  display: block;
+  position: absolute; }
+
+.screen2 {
+  background: url(../img/tvscreen.jpg);
+  width: 1700px;
+  height: 300px;
+  display: block;
+  position: absolute; }
 
 .satellite-box {
   position: absolute;
