--- a/css/site.scss
+++ b/css/site.scss
@@ -5,6 +5,7 @@
 // IMG
 	$img-url: url(../img/sprite.png);
 	$icons-url: url(../img/icons.png);
+	$screen-url: url(../img/tvscreen.jpg);
 
 // CONTAINER
 
@@ -15,7 +16,7 @@
 // FONTS
 
 	$font-normal: 'arial', sans-serif;
-	$content-font-size: 13px;
+	$content-font-size: 12px;
 
 	$font-bold: 'arial' ;
 
@@ -73,7 +74,7 @@
 	body {
 		@extend .font-normal;
 		-webkit-font-smoothing:antialiased;
-		padding-bottom: 200px
+		padding-bottom: 50px
 	}
 
 	.animation-box {
@@ -87,6 +88,11 @@
 		position: relative;
 	}
 
+		.animation-box:last-child:after {
+			border: none;
+		}
+
+
 	.animation-box:after {
 		display: block;
 		position: absolute;
@@ -99,9 +105,9 @@
 		left: 350px;
 		z-index: 10;
 		content: '';
-		opacity: 0.03;
-		animation: arrowmove 10s infinite;
-		-webkit-animation: arrowmove 10s infinite;
+		opacity: 0.09;
+		animation: arrowmove 5s infinite;
+		-webkit-animation: arrowmove 5s infinite;
 		}
 
 		@keyframes arrowmove
@@ -172,7 +178,7 @@
 		font-weight: bold;
 		text-shadow: 2px 2px 0px rgba(255,255,255,0.9);
 		font-family: $font-normal;
-		letter-spacing: -0.5px;
+		letter-spacing: -0.3px;
 		text-align: justify;
 		width: 640px;
 	}
@@ -187,8 +193,8 @@
 	// ANIMATED ICONS
 
 	ul.icons {
-		position: relative;
-		padding-top: 10px;
+		position: absolute;
+		margin-top: 120px;
 		z-index: 1;
 
 		li { 
@@ -234,6 +240,18 @@
 
 	}
 
+	.icons.noanim {
+		position: absolute;
+	 	height: 50px;
+		display: block;
+		margin-top: 120px;
+		z-index: 1;
+		background: $icons-url;
+		width: 1000px;
+		left: 0px;
+		opacity: 0
+	}
+
 	ul.icons.anim li {
 
 		animation: horizontalanim 10s infinite linear;
@@ -257,7 +275,7 @@
 		}
 
 ul.icons.anim {
-	margin-top: -60px; position: absolute; opacity: 0.9;
+	margin-top: -60px !important; position: absolute; opacity: 0.9;
 
 		li.icon1 {
 		animation: horizontalanim 5s infinite linear !important;
@@ -275,14 +293,14 @@ ul.icons.anim {
 		-webkit-animation-delay: 4s !important; }
 
 		li.icon4 {
-		animation: horizontalanim 7.3s infinite linear !important;
-		-webkit-animation: horizontalanim 7.3s infinite linear !important;
-		-webkit-animation-delay: 5s !important; }
+		animation: horizontalanim 8.3s infinite linear !important;
+		-webkit-animation: horizontalanim 8.3s infinite linear !important;
+		-webkit-animation-delay: 4s !important; }
 
 		li.icon5 {
 		animation: horizontalanim 7s infinite linear !important;
 		-webkit-animation: horizontalanim 7s infinite linear !important;
-		-webkit-animation-delay: 1s !important; }
+		-webkit-animation-delay: 5s !important; }
 
 		li.icon6 {
 		animation: horizontalanim 6s infinite linear !important;
@@ -325,7 +343,7 @@ ul.icons.anim {
 		left: -330px;
 		top: 20px;
 		background: $img-url;
-		background-position: -375px -345px !important;
+		background-position: -358px -346px !important;
 		display: block;
 		height: 240px;
 		width: 375px;	
@@ -338,13 +356,76 @@ ul.icons.anim {
 		left: 20px;
 		top: 20px;
 		background: $img-url;
-		background-position: -375px -345px !important;
+		background-position: -358px -346px !important;
 		display: block;
 		height: 240px;
 		width: 375px;	
 		background-repeat: no-repeat;
 		z-index: 5;
 	}
+
+	.tvon {
+		position: absolute;
+		left: 20px;
+		top: 17px;
+		background: $img-url;
+		background-position: -358px -595px !important;
+		display: block;
+		height: 240px;
+		width: 375px;	
+		background-repeat: no-repeat;
+		z-index: 5;
+	}
+	
+	.tvon-final {
+		position: absolute;
+		left: 185px;
+		top: 20px;
+		background: $img-url;
+		background-position: -358px -595px !important;
+		display: block;
+		height: 240px;
+		width: 375px;	
+		background-repeat: no-repeat;
+		z-index: 5;
+	}
+
+	.screenposition {
+		position: relative;
+		display:block;
+		height: 240px;
+		width: 375px;
+	}
+
+	.screenhidden {
+		box-shadow: 0 0 5px rgba(255,255,255,0.5) inset;
+		display:block;
+		height: 183px;
+		width: 340px;
+		position: relative;
+		border-radius: 3px;
+		margin-top: 17px;
+		margin-left: 18px;
+		overflow: hidden;
+	}
+
+	.screen {
+		background: $screen-url;
+		width: 1700px;
+		height: 300px;
+		display: block;
+		position: absolute;
+		}
+
+		.screen2 {
+		background: $screen-url;
+		width: 1700px;
+		height: 300px;
+		display: block;
+		position: absolute;
+		}
+
+		
 
 	.satellite-box {
 		position: absolute;
