--- a/css/site.scss
+++ b/css/site.scss
@@ -260,7 +260,7 @@
 
 		@keyframes horizontalanim
 		{
-		0% { top: -50px; opacity: 0; }
+		0% { top: -50px; opacity: 1; }
 		1% { top: -50px; opacity: 1; }
 		99% { top: 390px; opacity: 1; }
 		100% { top: 3900px; opacity: 0; }
@@ -268,7 +268,7 @@
 
 		@-webkit-keyframes horizontalanim
 		{			
-		0% { top: -50px; opacity: 0; }
+		0% { top: -50px; opacity: 1; }
 		1% { top: -50px; opacity: 1; }
 		99% { top: 390px; opacity: 1; }
 		100% { top: 390px; opacity: 0; }
@@ -482,6 +482,7 @@ ul.icons.anim {
 		z-index: 4;
 		animation: arrow2 2s infinite;
 		-webkit-animation: arrow2 2s infinite;
+		opacity: 0
 		}
 
 		@keyframes arrow2
