--- a/css/site.css
+++ b/css/site.css
@@ -285,7 +285,8 @@ ul.icons.anim {
   height: 240px;
   width: 375px;
   background-repeat: no-repeat;
-  z-index: 5; }
+  z-index: 5;
+  opacity: 0; }
 
 .tvon-final {
   position: absolute;
